--- a/topnavdrawer/src/main/res/layout/item_menu.xml
+++ b/topnavdrawer/src/main/res/layout/item_menu.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/item_shape"
-        android:padding="@dimen/margin_large" />
+        android:padding="@dimen/margin_medium" />
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/itemMenuTitle"
